Label icons in tables, closes #147

--- a/quizApp/templates/activities/activities_macros.html
+++ b/quizApp/templates/activities/activities_macros.html
@@ -36,8 +36,7 @@
       <th>Label</th>
       <th>Choice</th>
       <th>Correct?</th>
-      <th></th>
-      <th></th>
+      <th>Settings</th>
     </tr>
   </thead>
   <tbody>
