--- a/quizApp/templates/activities/read_activities.html
+++ b/quizApp/templates/activities/read_activities.html
@@ -20,7 +20,7 @@ Activity List
         <th>Type</th>
         <th>Text</th>
         <th>Category</th>
-        <th data-orderable="false"></th>
+        <th data-orderable="false">Settings</th>
       </tr>
     </thead>
     <tbody>
