--- a/quizApp/templates/datasets/read_datasets.html
+++ b/quizApp/templates/datasets/read_datasets.html
@@ -27,7 +27,7 @@ id="create-dataset-form">
         <th>ID</th>
         <th>Name</th>
         <th>URI</th>
-        <th data-orderable="false"></th>
+        <th data-orderable="false">Settings</th>
       </tr>
     </thead>
     <tfoot>
