Edit buttons on preview screens, closes #148

--- a/quizApp/templates/activities/read_question.html
+++ b/quizApp/templates/activities/read_question.html
@@ -10,6 +10,8 @@ Activity {{ question.id }} - Preview
 {% endblock %}
 
 {% block content %}
+<a href="{{ url_for('activities.settings_activity', activity_id=question.id) }}"
+   role="button" class="btn btn-primary">Edit</a>
 <div id='question'>
   <h3>{{ question.question }}</h3>
   <form id="question-submit-form">
