--- a/quizApp/templates/experiments/read_experiment.html
+++ b/quizApp/templates/experiments/read_experiment.html
@@ -16,16 +16,19 @@
 
 {% block content %}
 <p class="experiment-blurb">{{ experiment.blurb }}</p>
-  {% if current_user.has_role("participant") %}
-    {% if assignment %}
-      <p>Press the start button to begin.</p>
+{% if current_user.has_role("experimenter") %}
+<a href="{{ url_for('experiments.settings_experiment', experiment_id=experiment.id) }}"
+   role="button" class="btn btn-primary">Edit</a>
+<a href="{{ url_for('experiments.read_experiments') }}" class="btn btn-primary" role="button">Back to experiment listing</a> 
+{% endif %}
+{% if current_user.has_role("participant") %}
+  {% if assignment %}
+  <p>Press the start button to begin.</p>
 
-      <a href="{{ url_for('experiments.read_assignment', experiment_id=experiment.id,
-      a_id=assignment.id) }}" class="btn btn-primary">Start</a>
-    {% else %}
-      <p>You are done with this experiment.</p>
-    {% endif %}
+  <a href="{{ url_for('experiments.read_assignment', experiment_id=experiment.id,
+  a_id=assignment.id) }}" class="btn btn-primary">Start</a>
   {% else %}
-  <a href="{{ url_for('experiments.read_experiments') }}" class="btn btn-primary" role="button">Back to experiment listing</a> 
+  <p>You are done with this experiment.</p>
   {% endif %}
+{% endif %}
 {% endblock %}
