Refer to manage data page from experiment results. Closes #149

--- a/quizApp/templates/experiments/results_experiment.html
+++ b/quizApp/templates/experiments/results_experiment.html
@@ -5,6 +5,11 @@
 {% block title %}Results - {{ experiment.name }}{% endblock %}
 
 {% block content %}
+<div class="alert alert-info" role="alert">
+  {{ macros.render_glyphicon("info-sign") }}
+  Looking for more detailed information? You can see all experiment data
+  by <a href="{{ url_for('core.manage_data') }}">exporting data</a>.
+</div>
 <p>Number of participants involved: {{ num_participants }}</p>
 <p>Number of participants finished: {{ num_finished }} </p>
 <table class="table">
